# python-fontbro

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  SECURITY.md  codecov.yml  pyproject.toml  requirements-data.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test-coverage.sh  test-requirements.txt  tox.ini
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: create-release.yml  pre-commit-autoupdate.yml  pythonpackage.yml  test-package.yml  update-data.yml
fontbro/: __init__.py  exceptions.py  features.py  flags.py  font.py  math.py  metadata.py  subset.py  uni.py  unicodedata.py  utils.py
fontbro/data/: family-classifications.json  features.json  unicode-blocks.json  unicode-scripts.json
scripts/: update_data.py
tests/: __init__.py  test_characters.py  test_clone.py  test_close.py  test_collection.py  test_color.py  test_context_manager.py  test_family_classification.py  test_family_name.py  test_features.py  test_filename.py  test_fingerprint.py  test_format.py  test_glyphs.py  test_image.py  test_init.py  test_instantiation.py  test_issues.py  test_italic_angle.py  test_match.py  test_monospace.py  test_names.py  test_rename.py  test_sanitize.py  test_save.py  test_scripts.py  test_str.py  test_style_flags.py  test_style_name.py  test_subset.py  test_svg.py  test_unicode_blocks_and_scripts.py  test_update_unicode_data.py  test_variable.py  test_version.py  test_vertical_metrics.py  test_weight.py  test_width.py
tests/fonts/Honk/: OFL.txt  README.txt
tests/fonts/Nabla/: OFL.txt  README.txt
tests/fonts/Tourney/: OFL.txt  README.txt
