[metadata]
name = python-fontbro
version = 0.13.0
author = Fabio Caccamo
author_email = fabio.caccamo@gmail.com
description = friendly font operations on top of fontTools.
keywords =
    font
    fonttools
    languages
    opentype
    otf
    python
    scripts
    slicing
    subset
    subsetting
    ttf
    unicode
    utility
    variable
    variations
    woff
    woff2
    wrapper
    writing-systems
url = https://github.com/fabiocaccamo/python-fontbro
download_url = https://github.com/fabiocaccamo/python-fontbro/archive/0.13.0.tar.gz
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Other Environment
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Text Processing :: Fonts
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: Graphics Conversion
project_urls =
    Documentation = https://github.com/fabiocaccamo/python-fontbro#readme
    Issues = https://github.com/fabiocaccamo/python-fontbro/issues
    Funding = https://github.com/sponsors/fabiocaccamo/
    Twitter = https://twitter.com/fabiocaccamo

[options]
packages = find:
install_requires =
    fonttools[woff,unicode,pathops] >= 4.27.0, < 5.0
    imagehash >= 4.2.1, < 5.0.0
    pillow >= 8.4.0, < 10.0.0
    python-fsutil >= 0.6.0, < 1.0.0
include_package_data = True

[options.packages.find]
exclude = contrib; docs; tests*
